--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,8 @@
-version: '2'
+version: '3.5'
+
+networks:
+    asker:
+        name: asker
 
 services:
     db:
@@ -11,6 +15,8 @@ services:
             MYSQL_DATABASE: wishket_purple
             MYSQL_USER: wishket
             MYSQL_PASSWORD: nicegame14
+        networks:
+            - asker
     web:
         build: .
         command: python source/manage.py runserver 0.0.0.0:8000
@@ -20,3 +26,5 @@ services:
             - "8001:8000"
         depends_on:
             - db
+        networks:
+            - asker
