--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
         command: python source/manage.py runserver 0.0.0.0:8000
         volumes:
             - .:/app
+        restart: on-failure
         ports:
             - "8001:8000"
         depends_on:
