--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,4 @@ before_install:
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
   - sudo mv docker-compose /usr/local/bin
-
-script:
-  - docker-compose up
+  - docker-compose -f docker-compose.yml up --build -d
