--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,12 @@
 sudo: required
 
+language: python
+
 services:
   - docker
 
-env:
-  - DOCKER_COMPOSE_VERSION=3.5
-
 before_install:
-  - sudo rm /usr/local/bin/docker-compose
-  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
-  - chmod +x docker-compose
-  - sudo mv docker-compose /usr/local/bin
   - docker-compose -f docker-compose.yml up --build -d
+
+after_script:
+  - docker-compose -f docker-compose.yml down
