--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,12 @@ language: python
 services:
   - docker
 
-before_install:
-  - docker-compose up --build -d
+env:
+  - DOCKER_COMPOSE_VERSION=3.5
 
-after_script:
-  - docker-compose down
+before_install:
+  - sudo rm /usr/local/bin/docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - chmod +x docker-compose
+  - sudo mv docker-compose /usr/local/bin
+  - docker-compose up --build -d
