--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
 sudo: required
 
-language: python
-python:
-  - "2.7"
-install:
-  - pip install -r requirements.txt
+language: generic
 
 services:
   - docker
@@ -17,4 +13,6 @@ before_install:
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
   - sudo mv docker-compose /usr/local/bin
+
+script:
   - docker-compose up --build -d
